--- a/envs/wishlist.env
+++ b/envs/wishlist.env
@@ -6,3 +6,6 @@ RABBITMQ_DEFAULT_USER=wishlist
 RABBITMQ_DEFAULT_PASS=adKadkjkASDASDDS93ASDQE3
 BROKER_URL=amqp://wishlist:adKadkjkASDASDDS93ASDQE3@broker:5672
 CELERY_BROKER=amqp://wishlist:adKadkjkASDASDDS93ASDQE3@broker:5672
+
+BACKEND_URL=http://localhost:8080
+FRONT_UTL=http://localhost:3000
